Version 0.3.2:
	Bug fixes:
	- Correctly handle errors in conversion when loading files. When the
	  converter failed in unexpected ways Tilde would crash.

Version 0.3.1:
	Bug fixes:
	- Correctly handle non-existent files on load and save. Previous version
	  accidentally reintroduced the behaviour reported in bug 14.

Version 0.3.0:
	New features:
	- Detect instances of Tilde on the same terminal that have been suspended.

	Bug fixes:
	- Use realpath function to determine the name of files, rather than the
	  incorrect method used previously.
	- Don't expand autocompletion to word under the cursor (#15).

Version 0.2.2:
	New features:
	- When opening a non-existing file from the command line, the message
	  stating that Tilde could not open the file is now suppressed (#14).

	Bug fixes:
	- Compile with Large File Support if such support is available on the
	  platform.

Version 0.2.1:
	Bug fixes:
	- Fix invalidation of highlighting information, such that highlighting is
	  correctly updated on edits.

Version 0.2.0:
	New features:
	- 256 color mode is now supported.
	- Colors are now configurable from the Options/Interface menu.

Version 0.1.15:
	Bug fixes:
	- Explicitly use t3_widget namespace qualifier for key_t to prevent build
	  failures on some platforms.

Version 0.1.14:
	New features:
	- Matching brace highlighting and go to matching brace function.
	- Tilde now tries to preserve ACLs and other extended attributes (requires
	  libacl and libattr).

	Bug fixes:
	- Try to load the correct config file on errors in the configuration file.
	- Use -V as option for version information, rather than -v.

Version 0.1.13:
	New features:
	- Added an option to allow specification of the encoding on the command
	  line, or ask for encoding on start-up.
	- Handle BOMs on loading of UTF-8 files.

	Bug fixes:
	- Properly handle the start of a file such that BOMs are correctly
	  interpreted.

Version 0.1.12:
	Bug fixes:
	- Use correct name for UTF-8 with BOM converter.
