@@ -1,3 +1,9 @@
+Version :
+	Bug fixes:
+	- Warn users about attempting to write a read-only file.
+	- Improve warnings about encoding problems when saving.
+	- Correctly set the "Comment keyword" style.
+
 Version 0.3.2:
 	Bug fixes:
 	- Correctly handle errors in conversion when loading files. When the
